--- a/index.html
+++ b/index.html
@@ -1,165 +1,259 @@
 <!DOCTYPE html>
-<html lang="en">
-  <!DOCTYPE html>
-  <html lang="uk">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>123</title>
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
-        rel="stylesheet"
-      />
-      <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
-      />
-      <link rel="stylesheet" href="./styles.css" />
-    </head>
-    <body>
-      <header class="page-header container">
-        <a href="" class="site-logo">
-          <img src="./img/cat-logo.svg" alt="логотип сайту" width="24" height="24" />
-          Котодім
-        </a>
-        <nav class="page-nav">
-          <a href="">Обрати котика</a>
-          <a href="">Задонатити котикам</a>
-          <a href="">Контакти</a>
-        </nav>
-      </header>
+<html lang="uk">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Котодім</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.1.0/simple-lightbox.min.css"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/siema@1.5.1/dist/siema.min.css"
+    />
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <header class="page-header container">
+      <a href="" class="site-logo">
+        <img
+          src="./img/cat-logo.svg"
+          alt="логотип сайту"
+          width="24"
+          height="24"
+        />
+        Котодім
+      </a>
+      <nav class="page-nav">
+        <a href="">Обрати котика</a>
+        <a href="">Задонатити котикам</a>
+        <a href="">Контакти</a>
+      </nav>
+    </header>
 
-      <main>
-        <div class="hero container">
-          <section class="greeting">
-            <h1>Привіт, людино</h1>
-            <p>
-              Бракує в житті шовкових лапок, м’якенького пухнастого животика, теплого муррркотіння й
-              веселого розгардіяшу?Візьми собі котика.
-            </p>
-          </section>
-        </div>
-
-        <section class="section container">
-          <h2 class="section-title">Ці друзяки готові приймати твою любов і піклування</h2>
-          <ul class="cat-list">
-            <li>
-              <img src="./img/picture-2.jpg" alt="" />
-              <div class="content">
-                <h3>Барбарис</h3>
-                <p>Хижий для ворогів, ласкавий та м’якесенький до своїх.</p>
-              </div>
-            </li>
-            <li>
-              <img src="./img/picture-1.jpg" alt="" />
-              <div class="content">
-                <h3>Мишка</h3>
-                <p>Киця з роду котів-талісманів. Несе удачу та затишок в дім.</p>
-              </div>
-            </li>
-            <li>
-              <img src="./img/picture.jpg" alt="" />
-              <div class="content">
-                <h3>Капітан</h3>
-                <p>Всюди головний. Підкорить тебе, але ти будеш щасливий.</p>
-              </div>
-            </li>
-          </ul>
-        </section>
-
-        <section class="section container">
-          <h2 class="section-title">Котики, які вже знайшли сім’ю</h2>
-          <p class="section-text">
-            Ти тільки поглянь, скільки ніжності! <br />
-            На місці цих задоволених людей можеш бути ти.
-          </p>
-          <ul class="gallery">
-            <li>
-              <img src="./img/g-1.jpg" alt="galery item" />
-            </li>
-            <li>
-              <img src="./img/g-2.jpg" alt="galery item" />
-            </li>
-            <li>
-              <img src="./img/g-3.jpg" alt="galery item" />
-            </li>
-            <li>
-              <img src="./img/g-4.jpg" alt="galery item" />
-            </li>
-            <li>
-              <img src="./img/g-5.jpg" alt="galery item" />
-            </li>
-            <li>
-              <img src="./img/g-6.jpg" alt="galery item" />
-            </li>
-            <li>
-              <img src="./img/g-7.jpg" alt="galery item" />
-            </li>
-            <li>
-              <img src="./img/g-8.jpg" alt="galery item" />
-            </li>
-            <li>
-              <img src="./img/g-9.jpg" alt="galery item" />
-            </li>
-            <li>
-              <img src="./img/g-10.jpg" alt="galery item" />
-            </li>
-            <li>
-              <img src="./img/g-11.jpg" alt="galery item" />
-            </li>
-            <li>
-              <img src="./img/g-12.jpg" alt="galery item" />
-            </li>
-          </ul>
-        </section>
-      </main>
-
-      <footer class="page-footer">
+    <main>
+      <section class="hero">
         <div class="container">
-          <p class="footer-text">
-            <img src="./img/cat-logo.svg" alt="логотип сайту" width="24" height="24" />
-            Котики — то щастя. <br />
-            Забирай, люби й ставай щасливішим.
-          </p>
-
-          <section class="social">
-            <p class="social-text">Соцмережі</p>
-
-            <ul class="social-links">
-              <li>
-                <a href="">
-                  <svg>
-                    <use href="./img/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <svg>
-                    <use href="./img/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <svg>
-                    <use href="./img/icons.svg#icon-youtube"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <svg>
-                    <use href="./img/icons.svg#icon-tiktok"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </section>
+          <ul class="hero-list list">
+            <li class="hero-item first">
+              <div class="greeting">
+                <h1>Привіт, людино</h1>
+                <p>
+                  Бракує в житті шовкових лапок, м’якенького пухнастого
+                  животика, теплого муррркотіння й веселого розгардіяшу? Візьми
+                  собі котика.
+                </p>
+              </div>
+            </li>
+            <li class="hero-item second">
+              <div class="greeting">
+                <h1>Нарешті ти тут</h1>
+                <p>
+                  Люди й котики разом завжди щасливіші. Тож додай у своє життя
+                  щастячка. Чекаємо тебе!<br />
+                  Візьми собі котика.
+                </p>
+              </div>
+            </li>
+            <li class="hero-item third">
+              <div class="greeting">
+                <h1>Котики чекають</h1>
+                <p>
+                  Вибери того, що створений для тебе. Нехай сама любов муркоче
+                  тобі на вушко й торкається лапкою. <br />
+                  Візми собі котика.
+                </p>
+              </div>
+            </li>
+          </ul>
+          <div class="hero-buttons">
+            <button type="button" class="hero-btn next">
+              <img
+                src="./img/arrow-right.svg"
+                alt="стрілка вліво"
+                width="24"
+                height="24"
+              />
+            </button>
+            <button type="button" class="hero-btn prev">
+              <img
+                src="./img/arrow-left.svg"
+                alt="стрілка вправо"
+                width="24"
+                height="24"
+              />
+            </button>
+          </div>
         </div>
-      </footer>
-    </body>
-  </html>
+      </section>
+
+      <section class="section container">
+        <h2 class="section-title cats-title">
+          Ці друзяки готові приймати твою любов і піклування
+        </h2>
+        <ul class="cat-list">
+          <li data-aos="fade-up-left">
+            <img src="./img/picture-2.jpg" alt="" />
+            <div class="content">
+              <h3>Барбарис</h3>
+              <p>Хижий для ворогів, ласкавий та м’якесенький до своїх.</p>
+            </div>
+          </li>
+          <li data-aos="flip-down">
+            <img src="./img/picture-1.jpg" alt="" class="cat-photo" />
+            <div class="content">
+              <h3>Мишка</h3>
+              <p>Киця з роду котів-талісманів. Несе удачу та затишок в дім.</p>
+            </div>
+          </li>
+          <li data-aos="zoom-in-up">
+            <img src="./img/picture.jpg" alt="" />
+            <div class="content">
+              <h3>Капітан</h3>
+              <p>Всюди головний. Підкорить тебе, але ти будеш щасливий.</p>
+            </div>
+          </li>
+        </ul>
+      </section>
+
+      <section class="section container">
+        <h2 class="section-title" data-aos="flip-right">
+          Котики, які вже знайшли сім’ю
+        </h2>
+        <p class="section-text">
+          Ти тільки поглянь, скільки ніжності! <br />
+          На місці цих задоволених людей можеш бути ти.
+        </p>
+        <ul class="gallery">
+          <li>
+            <a href="./img/g-1-big.jpeg">
+              <img src="./img/g-1.jpg" alt="galery item" />
+            </a>
+          </li>
+          <li>
+            <a href="./img/g-2-big.jpeg">
+              <img src="./img/g-2.jpg" alt="galery item" />
+            </a>
+          </li>
+          <li>
+            <a href="./img/g-3-big.jpeg">
+              <img src="./img/g-3.jpg" alt="galery item" />
+            </a>
+          </li>
+          <li>
+            <a href="./img/g-4-big.jpeg">
+              <img src="./img/g-4.jpg" alt="galery item" />
+            </a>
+          </li>
+          <li>
+            <a href="./img/g-5-big.jpeg">
+              <img src="./img/g-5.jpg" alt="galery item" />
+            </a>
+          </li>
+          <li>
+            <a href="./img/g-6-big.jpeg">
+              <img src="./img/g-6.jpg" alt="galery item" />
+            </a>
+          </li>
+          <li>
+            <a href="./img/g-7-big.jpeg">
+              <img src="./img/g-7.jpg" alt="galery item" />
+            </a>
+          </li>
+          <li>
+            <a href="./img/g-8-big.jpeg">
+              <img src="./img/g-8.jpg" alt="galery item" />
+            </a>
+          </li>
+          <li>
+            <a href="./img/g-9-big.jpeg">
+              <img src="./img/g-9.jpg" alt="galery item" />
+            </a>
+          </li>
+          <li>
+            <a href="./img/g-10-big.jpeg">
+              <img src="./img/g-10.jpg" alt="galery item" />
+            </a>
+          </li>
+          <li>
+            <a href="./img/g-11-big.jpeg">
+              <img src="./img/g-11.jpg" alt="galery item" />
+            </a>
+          </li>
+          <li>
+            <a href="./img/g-12-big.jpeg">
+              <img src="./img/g-12.jpg" alt="galery item" />
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <div class="container">
+        <p class="footer-text">
+          <img
+            src="./img/cat-logo.svg"
+            alt="логотип сайту"
+            width="24"
+            height="24"
+          />
+          Котики — то щастя. <br />
+          Забирай, люби й ставай щасливішим.
+        </p>
+
+        <section class="social">
+          <p class="social-text">Соцмережі</p>
+
+          <ul class="social-links">
+            <li>
+              <a href="">
+                <svg>
+                  <use href="./img/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <svg>
+                  <use href="./img/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <svg>
+                  <use href="./img/icons.svg#icon-youtube"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <svg>
+                  <use href="./img/icons.svg#icon-tiktok"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </section>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/simplelightbox@2.1.0/dist/simple-lightbox.min.js
+    "></script>
+    <script src="https://unpkg.com/siema@1.5.1/dist/siema.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./js/main.js"></script>
+  </body>
 </html>
